# bias-notes

./: .env.example  .gitignore  AGENTS.md  How_to_use.md  Methods.md  README.md  analyze_results.ipynb  analyze_results.py  bias_assessment.ipynb  bias_detection_prompt.py  bias_pipeline.py  bias_review_utils.py  build_term_frequency_tables.py  check_notebooks_clean.py  eval_against_gold.ipynb  export_reviewer_adjudication.py  main.py  notebook_hygiene.py  ollama_bias_assessment.ipynb  pre_process_notes.ipynb  prepare_csv.ipynb  project_config.py  pyproject.toml  requirements.txt  run_100_notes.py  run_bias_batch.py
.githooks/: pre-push
.tmp-system-skills/claude-openrouter-opinion/: SKILL.md
.tmp-system-skills/claude-openrouter-opinion/agents/: openai.yaml
.tmp-system-skills/claude-openrouter-opinion/scripts/: ask_openrouter_claude.py
output/: canonical_run_statistics.md  n500_term_frequency_combined.md
scripts/: install_git_hooks.py
tests/: test_analyze_results.py  test_bias_pipeline.py  test_bias_review_utils.py  test_export_reviewer_adjudication.py  test_notebook_hygiene.py  test_run_bias_batch.py
