[project]
name = "bias-notes"
version = "0.1.0"
description = "Clinical note bias detection pipeline and analysis tools."
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel==6.30.1",
    "numpy==2.2.5",
    "openai==1.78.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "python-dotenv==1.1.1",
    "requests==2.32.3",
    "streamlit==1.45.0",
]

[tool.uv]
package = false
